
buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.0.RELEASE")
    }
}

plugins {
    id 'war'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

jar {
    baseName = 'hello-world-java'
    version =  '0.1.0'
}

repositories {
    mavenCentral()
    mavenLocal()
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
	compile("com.intuit.quickbooks-online:ipp-v3-java-data:4.0.1")
    compile (group: 'com.intuit.quickbooks-online', name: 'ipp-v3-java-devkit', version: '4.0.1', classifier: 'jar-with-dependencies')
    compile (group: 'com.intuit.quickbooks-online', name: 'oauth2-platform-api', version: '4.0.3', classifier: 'jar-with-dependencies')
    compile("org.springframework.boot:spring-boot-starter-web")
    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
    compile("org.springframework.data:spring-data-rest-webmvc")
    compile("org.json:json")
    compile("log4j:log4j:1.2.17")
    compile (group: 'ant', name: 'ant', version: '1.7.0')
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    compileOnly("org.springframework.boot:spring-boot-devtools")
    implementation 'org.glassfish.jaxb:jaxb-runtime'
    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
    //implementation "org.springframework.boot:spring-boot-starter-security"
}

wrapper {
    gradleVersion = '5.4.1'
}